--- a/HubbleLowZ.ipynb
+++ b/HubbleLowZ.ipynb
@@ -28,13 +28,28 @@
     {
       "cell_type": "code",
       "metadata": {
-        "id": "blCc5aQDZ4cV"
+        "id": "blCc5aQDZ4cV",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "outputId": "41b22f99-07b7-45ab-9b29-507ffa3e4f76"
       },
       "source": [
-        "import numpy as np"
+        "import numpy as np\n",
+        "!pip install scipy\n",
+        "import scipy.optimize as optimization"
       ],
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 173,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "Requirement already satisfied: scipy in /usr/local/lib/python3.7/dist-packages (1.4.1)\n",
+            "Requirement already satisfied: numpy>=1.13.3 in /usr/local/lib/python3.7/dist-packages (from scipy) (1.19.5)\n"
+          ],
+          "name": "stdout"
+        }
+      ]
     },
     {
       "cell_type": "markdown",
@@ -44,6 +59,8 @@
       "source": [
         "# Read text data from a file and plot them.\n",
         "The first step in the present work is not directly related to the statistics problem at hand, but it is quite important: you have to learn how to read in a text file. There are two you can use: hubble_low_z.dat and hubble.dat. The files are lists of supernovae with 3 facts about each: the redshift z, which for our purposes is the recession velocity divided by c (this is true only to leading order in v/c); the distance d in Mpc; and the measurement error on distance, delta-d (also in Mpc). Mpc, or megaparsecs, are the typical distance units in cosmology, equal to 3,261,560 light years.\n",
+        "\n",
+        "Example adapted from: https://physics.princeton.edu//~phy209/week4/index.html\n",
         "\n"
       ]
     },
@@ -53,27 +70,28 @@
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "id": "2dNB527L2oP6",
-        "outputId": "b0d6c51e-960f-4d2d-977b-9feb62795bfd"
+        "id": "ceKsdGY9_69B",
+        "outputId": "efcdfce1-22ff-4cb4-e1e2-c3a36afcceb1"
       },
       "source": [
-        "!wget https://physics.princeton.edu//~phy209/week4/hubble_low_z.dat"
+        "\n",
+        "!wget https://clearskiesrbest.files.wordpress.com/2021/08/hubble.zip"
       ],
-      "execution_count": 1,
+      "execution_count": 166,
       "outputs": [
         {
           "output_type": "stream",
           "text": [
-            "--2021-08-09 19:59:52--  https://physics.princeton.edu//~phy209/week4/hubble_low_z.dat\n",
-            "Resolving physics.princeton.edu (physics.princeton.edu)... 128.112.100.6\n",
-            "Connecting to physics.princeton.edu (physics.princeton.edu)|128.112.100.6|:443... connected.\n",
+            "--2021-08-10 02:58:07--  https://clearskiesrbest.files.wordpress.com/2021/08/hubble.zip\n",
+            "Resolving clearskiesrbest.files.wordpress.com (clearskiesrbest.files.wordpress.com)... 192.0.72.20, 192.0.72.21\n",
+            "Connecting to clearskiesrbest.files.wordpress.com (clearskiesrbest.files.wordpress.com)|192.0.72.20|:443... connected.\n",
             "HTTP request sent, awaiting response... 200 OK\n",
-            "Length: 395 [text/plain]\n",
-            "Saving to: ‘hubble_low_z.dat’\n",
+            "Length: 1728 (1.7K) [application/zip]\n",
+            "Saving to: ‘hubble.zip’\n",
             "\n",
-            "\rhubble_low_z.dat      0%[                    ]       0  --.-KB/s               \rhubble_low_z.dat    100%[===================>]     395  --.-KB/s    in 0s      \n",
+            "\rhubble.zip            0%[                    ]       0  --.-KB/s               \rhubble.zip          100%[===================>]   1.69K  --.-KB/s    in 0s      \n",
             "\n",
-            "2021-08-09 19:59:52 (20.7 MB/s) - ‘hubble_low_z.dat’ saved [395/395]\n",
+            "2021-08-10 02:58:07 (40.4 MB/s) - ‘hubble.zip’ saved [1728/1728]\n",
             "\n"
           ],
           "name": "stdout"
@@ -87,17 +105,28 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "N8TTWKrVgUQm",
-        "outputId": "0ee183ac-828a-4099-a2ce-49f216abfa94"
+        "outputId": "5e242f8c-6e1d-45ec-9242-deb0e33e178a"
       },
       "source": [
-        "!ls\n"
+        "!ls\n",
+        "!unzip hubble.zip\n",
+        "!ls"
       ],
-      "execution_count": 2,
+      "execution_count": 170,
       "outputs": [
         {
           "output_type": "stream",
           "text": [
-            "hubble_low_z.dat  sample_data\n"
+            "demo-robustness-curve-fit.png  hubble_original_data.txt  sample_data\n",
+            "hubble_low_z.dat\t       hubble.txt\t\t sample_hubble.png\n",
+            "hubble_low_z.txt\t       hubble.zip\n",
+            "Archive:  hubble.zip\n",
+            "replace hubble.txt? [y]es, [n]o, [A]ll, [N]one, [r]ename: n\n",
+            "replace hubble_low_z.txt? [y]es, [n]o, [A]ll, [N]one, [r]ename: n\n",
+            "replace hubble_original_data.txt? [y]es, [n]o, [A]ll, [N]one, [r]ename: n\n",
+            "demo-robustness-curve-fit.png  hubble_original_data.txt  sample_data\n",
+            "hubble_low_z.dat\t       hubble.txt\t\t sample_hubble.png\n",
+            "hubble_low_z.txt\t       hubble.zip\n"
           ],
           "name": "stdout"
         }
@@ -137,7 +166,7 @@
         "    return numpy.array(z), numpy.array(d), numpy.array(derr)\n",
         "\n"
       ],
-      "execution_count": 4,
+      "execution_count": 171,
       "outputs": []
     },
     {
@@ -147,13 +176,13 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "o3ltyH1_ghGk",
-        "outputId": "94fe94b3-bb55-48f1-8e77-3b7012402eee"
+        "outputId": "bff41025-8cb4-42bb-ace8-52f53d151e0d"
       },
       "source": [
-        "z,d,derr = read_hubble_data('hubble_low_z.dat')\n",
+        "z,d,derr = read_hubble_data('hubble_low_z.txt')\n",
         "print(z,d,derr)"
       ],
-      "execution_count": 8,
+      "execution_count": 172,
       "outputs": [
         {
           "output_type": "stream",
@@ -200,7 +229,7 @@
         "legend(loc='upper left')\n",
         "savefig('sample_hubble.png')"
       ],
-      "execution_count": 13,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -214,6 +243,278 @@
             "tags": [],
             "needs_background": "light"
           }
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "SG-Z17NlCP_N"
+      },
+      "source": [
+        "#Compute the chi-squared distribution probability-to-exceed.\n",
+        "This cumulative probability distribution is based on the incomplete\n",
+        "gamma function.\n",
+        "\n",
+        "J. Fowler, Princeton\n"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "baP4bF8Asanh"
+      },
+      "source": [
+        "from numpy import sin, cos, log, exp, abs\n",
+        "\n",
+        "def gammaln(xx):\n",
+        "    \"\"\"Return log[Gamma(xx)] for x>0\"\"\"\n",
+        "\n",
+        "    cof=(76.18009172947146,-86.50532032941677,\n",
+        "         24.01409824083091,-1.231739572450155,\n",
+        "         0.1208650973866179e-2,-0.5395239384953e-5)\n",
+        "\n",
+        "    y = x = xx\n",
+        "    tmp = x + 5.5\n",
+        "    tmp -= (x+0.5)*log(tmp)\n",
+        "    ser = 1.000000000190015\n",
+        "    for j in range(6):\n",
+        "        y += 1.0\n",
+        "        ser += cof[j]/y\n",
+        "    return -tmp+log(2.5066282746310005*ser/x)\n",
+        "\n",
+        "\n",
+        "def gser( a, x, ITMAX=100, EPS = 3.0e-7 ):\n",
+        "    \"\"\"\n",
+        "    Returns a 2-tuple: the incomplete gamma function P(a,x) evaluated\n",
+        "    by its series representation and ln[Gamma(a)]\n",
+        "    ITMAX is the max number of iterations, EPS is the fractional\n",
+        "    tolerance required.\n",
+        "    \"\"\"\n",
+        "    assert (x > 0.0)\n",
+        "    gln = gammaln(a)\n",
+        "    ap = a\n",
+        "    delta = sum = 1.0/a\n",
+        "    for n in range(1, ITMAX+1):\n",
+        "        ap += 1.0\n",
+        "        delta *= x/ap\n",
+        "        sum += delta\n",
+        "        if abs(delta) < abs(sum)*EPS:\n",
+        "            gamser = sum*exp(-x+a*log(x)-gln)\n",
+        "            return gamser, gln\n",
+        "    raise \"a too large, ITMAX too small in routine gser\"\n",
+        "\n",
+        "\n",
+        "def gcf( a, x, ITMAX=100, EPS = 3.0e-7 ):\n",
+        "    \"\"\"\n",
+        "    Returns a 2-tuple: the incomplete gamma function Q(a,x) evaluated\n",
+        "    by its continues fraction representation and ln[Gamma(a)]\n",
+        "    ITMAX is the max number of iterations, EPS is the fractional\n",
+        "    tolerance required.\n",
+        "    \"\"\"\n",
+        "    assert (x > 0.0)\n",
+        "    FPMIN = 1.0e-30\n",
+        "\n",
+        "    gln = gammaln(a)\n",
+        "    b = x+1.0-a\n",
+        "    c=1.0/FPMIN\n",
+        "    d=1.0/b\n",
+        "    h=d\n",
+        "    for i in range(1, ITMAX+1):\n",
+        "        an = -i*(i-a)\n",
+        "        b += 2.0\n",
+        "        d=an*d+b\n",
+        "        if (abs(d) < FPMIN): d=FPMIN\n",
+        "        c=b+an/c\n",
+        "        if (abs(c) < FPMIN): c=FPMIN\n",
+        "        d=1.0/d\n",
+        "        delta=d*c\n",
+        "        h *= delta\n",
+        "        if (abs(delta-1.0) < EPS):\n",
+        "            gammcf=exp(-x+a*log(x)-(gln))*h\n",
+        "            return (gammcf, gln)\n",
+        "    raise \"a too large, ITMAX too small in gcf\"\n",
+        "\n",
+        "\n",
+        "\n",
+        "def gammq(a, x):\n",
+        "    \"\"\"Returns the incomplete gamma function Q(a,x), which is\n",
+        "    equivalent to  1-P(a,x)\"\"\"\n",
+        "\n",
+        "    assert (x >= 0.0 and a> 0.0)\n",
+        "    if x < (a+1.0):\n",
+        "        return 1.0-gser(a,x)[0]\n",
+        "    else:\n",
+        "        return gcf(a,x)[0]\n",
+        "    \n",
+        "\n",
+        "def chisqprob(chisq, nu):\n",
+        "    \"\"\"\n",
+        "    Returns the chi-squared distribution probability-to-exceed.\n",
+        "    chisq = The chisquared value.\n",
+        "    nu = Number of degrees of freedom.\n",
+        "    \"\"\"\n",
+        "\n",
+        "    return gammq(nu*0.5, chisq*0.5)"
+      ],
+      "execution_count": 20,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "huzzmiSjtPWW",
+        "outputId": "2aa8b484-cc40-44ea-fb72-614e157fc6b4"
+      },
+      "source": [
+        "cp = chisqprob(1.6, 3)\n",
+        "print(cp)"
+      ],
+      "execution_count": 21,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "0.6593898236078811\n"
+          ],
+          "name": "stdout"
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "hzpIraTbFL3S"
+      },
+      "source": [
+        "# Least-squares fitting in Python\n",
+        "\n",
+        "Example adapted from: https://python4mpia.github.io/fitting_data/least-squares-fitting.html"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "HrDsDE7vyIe-"
+      },
+      "source": [
+        "xdata = d\n",
+        "ydata = distance(z)\n",
+        "sigma = derr"
+      ],
+      "execution_count": 198,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "W-5xX_W11ofz"
+      },
+      "source": [
+        "def func(x, a, b, c):\n",
+        "    return a + b*x + c*x*x"
+      ],
+      "execution_count": 199,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "HdCnuhJ-1rBV",
+        "outputId": "0b9c6846-b37e-4448-c8a3-b8aed03ebfe9"
+      },
+      "source": [
+        "# This outputs the actual parameter estimate (a, b, c) and the 3x3 covariance matrix.\n",
+        "# Initial guess.\n",
+        "x0 = numpy.array([0.0, 0.0, 0.0])\n",
+        "print(optimization.curve_fit(func, xdata, ydata, x0, sigma))"
+      ],
+      "execution_count": 200,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "(array([ 6.48431388e+00,  1.06527756e+00, -2.90560058e-04]), array([[ 9.13740750e+01, -1.22234580e+00,  2.94004849e-03],\n",
+            "       [-1.22234580e+00,  1.90259127e-02, -4.92350476e-05],\n",
+            "       [ 2.94004849e-03, -4.92350476e-05,  1.41057872e-07]]))\n"
+          ],
+          "name": "stdout"
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "b6PQ-tM26e6Y"
+      },
+      "source": [
+        "# The function whose square is to be minimised.\n",
+        "# params ... list of parameters tuned to minimise function.\n",
+        "# Further arguments:\n",
+        "# xdata ... design matrix for a linear model.\n",
+        "# ydata ... observed data.\n",
+        "def func(params, xdata, ydata):\n",
+        "    return (ydata - numpy.dot(xdata, params))"
+      ],
+      "execution_count": 201,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "L_s-LF8OB23x",
+        "outputId": "ccc3551e-710d-4247-a4bb-4f552f5b10b0"
+      },
+      "source": [
+        "# plus some noise.\n",
+        "mu, sigma = np.mean(xdata), 70.0 # mean and standard deviation\n",
+        "print(sigma)\n",
+        "s = np.random.normal(mu, sigma, len(xdata))"
+      ],
+      "execution_count": 205,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "70.0\n"
+          ],
+          "name": "stdout"
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "rZGLjJDH6jcv",
+        "outputId": "b6ce901c-2d1d-4424-8f6d-967e384baf83"
+      },
+      "source": [
+        "# Initial guess.\n",
+        "x0    = numpy.array([0.0, 0.0])\n",
+        "# Provide data as design matrix: straight line with a and b plus some noise.\n",
+        "xdataN = numpy.transpose(np.vstack((s,xdata)))\n",
+        "print(optimization.leastsq(func, x0, args=(xdataN, ydata)))"
+      ],
+      "execution_count": 206,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "(array([0.05324016, 0.95656713]), 3)\n"
+          ],
+          "name": "stdout"
         }
       ]
     }
